# th-android

./: .gitignore  build.sh
cmake/: android.toolchain.cmake
demos/android-demo/: build.sh  clean.sh  local.properties
demos/android-demo/assets/: DataLoader.lua  PerceptualCriterion.lua  StyleLoss.lua  fast_neural_style.lua  main.lua  models.lua  print_options.lua  utils.lua
demos/android-demo/assets/lua/5.1/torch/: File.lua
demos/android-demo/jni/: Android.mk  Application.mk
demos/android-demo/src/com/torch/torchdemo/: TorchDemo.java
distro/extra/: CMakeLists.txt
distro/extra/lua-cjson/: CMakeLists.txt  lua_cjson.c
distro/extra/nnpack/: CMakeLists.txt
distro/pkg/torch/lib/TH/: CMakeLists.txt
distro/pkg/torch/lib/TH/cmake/: FindBLAS.cmake
install/share/lua/5.1/nnpack/: ffi.lua  init.lua
src/: torchandroid.cpp  torchandroid.h
