CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)
FILE(GLOB luasrc *.lua)

INSTALL(FILES
    "${PREBUILT_TARGET_LIB_DIR}/lib/libnnpack.so"
    "${PREBUILT_TARGET_LIB_DIR}/lib/libnnpack_ukernels.so"
      PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                  GROUP_READ GROUP_WRITE GROUP_EXECUTE
                  WORLD_READ WORLD_EXECUTE
      DESTINATION "${LIBRARY_OUTPUT_PATH}")

ADD_TORCH_PACKAGE(nnpack "" "${luasrc}")
